# ai_weather_wallpaper

./: .gitignore  README.md  analysis_options.yaml  melos.yaml  pubspec.yaml
.reasonix/: desktop-topic-created-at.json  desktop-topic-title-sources.json  desktop-topic-titles.json
.reasonix/autoresearch/20250618-120000-bootstrap-monorepo/state/: findings.jsonl  progress.json  task_spec.md
apps/desktop_app/: pubspec.yaml
apps/desktop_app/lib/: app.dart  bootstrap.dart  main.dart  routes.dart
apps/desktop_app/lib/screens/: about_screen.dart  home_screen.dart  settings_screen.dart  wallpaper_picker_screen.dart  weather_settings_screen.dart
apps/desktop_app/lib/widgets/: glass_card.dart
apps/desktop_app/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
assets/: README.md
assets/shaders/: aurora.glsl  cloud.glsl  rain.glsl  snow.glsl  water.glsl
backend/ai-service/: README.md
backend/weather-service/: README.md
docs/: api.md  architecture.md  database.md
native/windows/: CMakeLists.txt
native/windows/ffmpeg_player/: decoder.cpp  player.cpp  player.h  renderer.cpp
native/windows/tray_manager/: tray_manager.cpp  tray_manager.h
native/windows/wallpaper_host/: wallpaper_host.cpp  wallpaper_host.h
native/windows/workerw/: workerw.cpp  workerw.h  workerw_plugin.cpp
scripts/: build.ps1  package.ps1  release.ps1
